# python_tests_tutorial

./: .gitignore  LICENSE  README.md  TUTORIAL.md  pyproject.toml
myproject/: calculator.py  main.py
tests/: conftest.py  test_calculator.py  test_class.py  test_class_fixture.py  test_example.py  test_func.py  test_func_bad_example.py  test_func_class.py  test_func_class_parametrized.py  test_func_fixture.py  test_func_parametrized.py
